--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img
-                        src="C:\Users\jbart\OneDrive\Documentos\PaginasWeb\Html\imagenesPagina\logo.jpg " width="70px"
+                        src="imagenesPagina/logo.jpg" width="70px"
                         height="70px" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
