--- a/domicilios.html
+++ b/domicilios.html
@@ -60,7 +60,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img
-                        src="C:\Users\jbart\OneDrive\Documentos\PaginasWeb\Html\imagenesPagina\logo.jpg " width="70px"
+                        src="imagenesPagina\logo.jpg " width="70px"
                         height="70px" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -191,6 +191,50 @@
             </form>
         </div>
     </section>
+
+    <footer class="bg-body-tertiary text-center text-lg-start">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!--Grid row-->
+            <div class="row">
+                <!--Grid column - Información principal -->
+                <div class="col-lg-8 col-md-12 mb-4 mb-md-0">
+                    <h4 class="text-uppercase mb-3">Brasas y Barriles Quintero</h4>
+                    <p class="mb-3">
+                        El mejor lugar para reunirse, compartir grandes momentos y disfrutar de la combinación perfecta
+                        entre las brasas más sabrosas y el ambiente más acogedor. ¡Tu mesa está lista!
+                    </p>
+                    <p class="mb-0">
+                        <strong>Sabores auténticos, momentos inolvidables.</strong>
+                    </p>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column - Información de contacto -->
+                <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
+                    <h5 class="text-uppercase mb-3">Visítanos</h5>
+                    <p class="mb-2">
+                        <i class="fas fa-map-marker-alt me-2"></i>Popyán, Cauca, Colombia.
+                    </p>
+                    <p class="mb-2">
+                        <i class="fas fa-phone me-2"></i>+57 3105912900
+                    </p>
+                    <p class="mb-2">
+                        <i class="fas fa-clock me-2"></i>Lun-Dom: 12:00 - 23:00
+                    </p>
+                </div>
+                <!--Grid column-->
+            </div>
+            <!--Grid row-->
+        </div>
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2025 Copyright: Brasas y Barriles Quintero
+        </div>
+        <!-- Copyright -->
+    </footer>
 
 
 
