--- a/Pagina4.html
+++ b/Pagina4.html
@@ -13,7 +13,7 @@
 
 
 	<section class="accordion-section">
-		<button class="button" onclick="location.href='index.html'">
+		<button class="buttonVolver" onclick="location.href='index.html'">
 			<div class="button-outer">
 				<div class="button-inner">
 					<span>Volver</span>
