--- a/domicilios.html
+++ b/domicilios.html
@@ -10,16 +10,11 @@
 
 <body class="body">
     <header>
-        <div  id="barraNaranja"
-            style="color: white ; font-family: Georgia, 'Times New Roman', Times, serif; font: Georgia; font-size: 20px;"><img src="imagenesPagina/icono.ico"
+        <div id="barraNaranja"
+            style="color: white ; font-family: Georgia, 'Times New Roman', Times, serif; font: Georgia; font-size: 20px;">
+            <img src="imagenesPagina/icono.ico"
                 style="width: 30px; height: 30px; top: 00px; right: 9px; z-index: 1000; border: none; border-radius: 5px; cursor: pointer;"
-                alt="Icono de la pagina"> </img> BBQ
-            
-
-
-
-
-
+                alt="Icono de la pagina"> BBQ
 
             <button id="toggleAudio" onclick="toggleAudio()"
                 style="height: 40px ;position: fixed; top: 00px; right: 10px; z-index: 1000; background-color: rgb(121, 2, 2); border: none; padding: 5px; border-radius: 5px; cursor: pointer; color : white; ">
@@ -30,38 +25,12 @@
                 <source src="Audios/sonidoCarne.mp3" type="audio/mpeg">
                 <source src="Audios/sonidoCarne.ogg" type="audio/ogg">
             </audio>
-
-            <script>
-                let audioActivo = false;
-
-                function toggleAudio() {
-                    const audio = document.getElementById('audioFondo');
-                    const boton = document.getElementById('toggleAudio');
-
-                    if (!audioActivo) {
-                        audio.play();
-                        boton.textContent = '🔊 ON';
-                        audioActivo = true;
-                    } else {
-                        audio.pause();
-                        boton.textContent = '🔊 OFF';
-                        audioActivo = false;
-                    }
-                }
-            </script>
-
         </div>
-
-
-
-
-
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img
-                        src="imagenesPagina\logo.jpg " width="70px"
-                        height="70px" alt=""></a>
+                <a class="navbar-brand" href="#"><img src="imagenesPagina/logo.jpg" width="70px" height="70px"
+                        alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -69,33 +38,15 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#mision">Mision</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#mision">Vision</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#video">Galeria</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="reservas.html">Reservas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="domicilios.html">Domicilio</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="menu.html">Menú</a></li>
+                        <li class="nav-item"><a class="nav-link" href="reservas.html">Reservas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="domicilios.html">Domicilios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Pagina4.html">Acordeon</a></li>
                     </ul>
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="¿Buscasbas Algo?"
-                            aria-label="search" />
-                        <button class="btnSearch" type="">Buscar</button>
+                        <input class="form-control me-2" type="search" placeholder="¿Buscas algo?" aria-label="search">
+                        <button class="btnSearch" type="submit">Buscar</button>
                     </form>
                 </div>
             </div>
@@ -104,11 +55,10 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="imagenesCarrusel/asado.jpg" class="d-block w-100" alt="..." height="300px" width="1200px">
+                    <img src="imagenesCarrusel/asado.jpg" class="d-block w-100" alt="..." height="300px">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="imagenesCarrusel/asado1.jpg" class="d-block w-100" alt="..." height="300px"
-                        width="1200px">
+                    <img src="imagenesCarrusel/asado1.jpg" class="d-block w-100" alt="..." height="300px">
                 </div>
                 <div class="carousel-item">
                     <img src="imagenesCarrusel/asado2.jpg" class="d-block w-100" alt="..." height="300px">
@@ -128,13 +78,6 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-
-
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
-            </script>
-
     </header>
 
 
