--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="CSS/style1.css">
     <link rel="shortcut icon" href="imagenesPagina/icono.ico" type="image/x-icon">
+    <title>BBQ-Welcome</title>
 </head>
 
 <body class="body">
