--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/style1.css ">
     <link rel="shortcut icon" href="imagenesPagina/icono.ico" type="image/x-icon">
+    <title>BBQ-Menú</title>
 </head>
 
 <body class="body">
