--- a/Pagina4.html
+++ b/Pagina4.html
@@ -35,7 +35,7 @@
 						negocio y el acceso a datos, todo dentro del mismo proceso. Es fácil de desarrollar y probar en
 						etapas iniciales, pero conforme crece el sistema, se vuelve difícil de escalar, mantener y
 						desplegar. Un cambio pequeño puede requerir recompilar y redeplegar toda la aplicación.</p>
-					<img src="C:\Users\jbart\Downloads\monolitica.webp" width="200" height="150">
+					<img src="imagenesAcordeon/monolitica.webp" width="200" height="150">
 				</div>
 			</div>
 
@@ -48,7 +48,7 @@
 						pequeños e independientes entre sí. A diferencia del enfoque tradicional y monolítico de las
 						aplicaciones, en el que todo se compila en una sola pieza, los microservicios son elementos
 						independientes que funcionan en conjunto para llevar a cabo las mismas tareas.</p>
-					<img src="C:\Users\jbart\Downloads\MicroServicios.png" width="200" height="150">
+					<img src="imagenesAcordeon/MicroServicios.png" width="200" height="150">
 				</div>
 			</div>
 
@@ -60,7 +60,7 @@
 						protocolo de nivel de aplicación, según el Modelo OSI. Es utilizado para sistemas de archivos
 						distribuido en un entorno de red de ordenadores de área local. Posibilita que distintos sistemas
 						conectados a una misma red accedan a ficheros remotos como si se tratara de locales.</p>
-					<img src="C:\Users\jbart\Downloads\NFS.webp" width="200" height="150">
+					<img src="imagenesAcordeon/NFS.webp" width="200" height="150">
 				</div>
 			</div>
 
@@ -73,7 +73,7 @@
 						datos y persistencia. Cada capa interactúa solo con la adyacente, lo que facilita la separación
 						de responsabilidades, el mantenimiento y las pruebas. Es ampliamente usada en aplicaciones
 						empresariales tradicionales.</p>
-					<img src="C:\Users\jbart\Downloads\capas.webp" width="200" height="150">
+					<img src="imagenesAcordeon/Capas.webp" width="200" height="150">
 				</div>
 			</div>
 
@@ -86,7 +86,7 @@
 						exterior a través de “puertos” y “adaptadores”, lo que permite cambiar tecnologías sin afectar
 						la lógica central. Es ideal para sistemas que requieren alta testabilidad, flexibilidad y
 						desacoplamiento.</p>
-					<img src="C:\Users\jbart\Downloads\hexagonal.webp" width="200" height="150">
+					<img src="imagenesAcordeon/hexagonal.webp" width="200" height="150">
 				</div>
 			</div>
 
@@ -99,7 +99,7 @@
 						una alta escalabilidad y flexibilidad, especialmente en sistemas distribuidos o en tiempo real.
 						Es útil cuando las acciones del usuario o del sistema deben desencadenar múltiples respuestas
 						asincrónicas.</p>
-					<img src="C:\Users\jbart\Downloads\eventos.png" width="200" height="150">
+					<img src="imagenesAcordeon/eventos.png" width="200" height="150">
 				</div>
 			</div>
 
@@ -112,7 +112,7 @@
 						unidad funcional del negocio. Aunque comparte principios con los microservicios, SOA tiende a
 						ser más pesado y formal, con énfasis en contratos y gobernanza. Fue muy popular en entornos
 						corporativos antes del auge de los microservicios.</p>
-					<img src="C:\Users\jbart\Downloads\SOA.png" width="200" height="150">
+					<img src="imagenesAcordeon/SOA.png" width="200" height="150">
 				</div>
 			</div>
 
@@ -125,7 +125,7 @@
 						específicos (HTTP, colas, cron, etc.) y escala automáticamente. Es ideal para tareas puntuales o
 						backend ligero, aunque puede ser limitada para sistemas complejos o con alta persistencia de
 						estado.</p>
-					<img src="C:\Users\jbart\Downloads\servereless.png" width="200" height="150">
+					<img src="imagenesAcordeon/servereless.png" width="200" height="150">
 				</div>
 			</div>
 
@@ -137,7 +137,7 @@
 						reutilizables, cada uno encapsulando una funcionalidad específica. Es común en desarrollo de
 						juegos (como Unity o LibGDX), donde los objetos del juego se componen de múltiples módulos
 						(renderizado, física, lógica, etc.). Facilita la extensibilidad y el mantenimiento modular.</p>
-					<img src="C:\Users\jbart\Downloads\componentes.webp" width="200" height="150">
+					<img src="imagenesAcordeon/componentes.webp" width="200" height="150">
 				</div>
 			</div>
 
@@ -150,7 +150,7 @@
 						dependencias siempre apuntan hacia el núcleo, lo que permite alta testabilidad, flexibilidad y
 						longevidad del software. Es ideal para proyectos que requieren una base sólida y mantenible a
 						largo plazo.</p>
-					<img src="C:\Users\jbart\Downloads\clean-architecture.png" width="200" height="150">
+					<img src="imagenesAcordeon/clean-architecture.png" width="200" height="150">
 				</div>
 			</div>
 
