--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
             ],
             'menu.html': [
                 { term: 'menú', page: 'menu.html' },
+                { term: 'menu', page: 'menu.html' },
+                { term: 'carta', page: 'menu.html' },
                 { term: 'comida', page: 'menu.html' },
                 { term: 'platos', page: 'menu.html' },
                 { term: 'carnes', page: 'menu.html' }
