--- a/menu.html
+++ b/menu.html
@@ -40,13 +40,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#mision">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#galeria">Galería</a></li>
                         <li class="nav-item"><a class="nav-link" href="menu.html">Menú</a></li>
                         <li class="nav-item"><a class="nav-link" href="reservas.html">Reservas</a></li>
                         <li class="nav-item"><a class="nav-link" href="domicilios.html">Domicilios</a></li>
                         <li class="nav-item"><a class="nav-link" href="Pagina4.html">Acordeon</a></li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="¿Buscas algo?" aria-label="search">
+                    <form class="d-flex" role="search" id="searchForm">
+                        <input class="form-control me-2" type="search" placeholder="¿Buscas algo?" aria-label="search"
+                            id="searchInput">
                         <button class="btnSearch" type="submit">Buscar</button>
                     </form>
                 </div>
@@ -55,17 +58,17 @@
 
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="imagenesCarrusel/asado.jpg" class="d-block w-100" alt="..." height="300px">
+                <div class="carousel-item active" data-bs-interval="3000">
+                <img src="imagenesCarrusel/asado.jpg" class="d-block w-100" alt="..." height="300px">
                 </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <img src="imagenesCarrusel/asado1.jpg" class="d-block w-100" alt="..." height="300px">
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="imagenesCarrusel/asado1.png" class="d-block w-100 h-300" alt="..." height="300px">
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="3000">
                     <img src="imagenesCarrusel/asado2.jpg" class="d-block w-100" alt="..." height="300px">
                 </div>
-                <div class="carousel-item">
-                    <img src="imagenesCarrusel/asado3.jpg" class="d-block w-100" alt="..." height="300px">
+                <div class="carousel-item" data-bs-interval="3000">
+                    <img src="imagenesCarrusel/asado3.png" class="d-block w-100 h-300" alt="..." height="300px">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -80,6 +83,8 @@
             </button>
         </div>
     </header>
+
+    
 
     <div class="menu-container">
         <div class="menu-page">
