--- a/domicilios.html
+++ b/domicilios.html
@@ -302,7 +302,7 @@
                 <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
                     <h5 class="text-uppercase mb-3">Visítanos</h5>
                     <p class="mb-2">
-                        <i class="fas fa-map-marker-alt me-2"></i>Popyán, Cauca, Colombia.
+                        <i class="fas fa-map-marker-alt me-2"></i>Popayán, Cauca, Colombia.
                     </p>
                     <p class="mb-2">
                         <i class="fas fa-phone me-2"></i>+57 3105912900
