--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </div>
     </main>
 
-    <footer class="bg-body-tertiary text-center text-lg-start">
+    <footer class="footer text-center text-lg-start">
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-8 col-md-12 mb-4 mb-md-0">
