--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="3000">
-                <img src="imagenesCarrusel/asado.jpg" class="d-block w-100" alt="..." >
+                <img src="imagenesCarrusel/asado1.jpg" class="d-block w-100" alt="..." >
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                    <img src="imagenesCarrusel/asado1.png" class="d-block w-100 h-300" alt="..." >
+                    <img src="imagenesCarrusel/asado.png" class="d-block w-100 h-300" alt="..." >
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                    <img src="imagenesCarrusel/asado2.jpg" class="d-block w-100" alt="..." >
+                    <img src="imagenesCarrusel/asado3.jpg" class="d-block w-100" alt="..." >
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                    <img src="imagenesCarrusel/asado3.png" class="d-block w-100 h-300" alt="..." >
+                    <img src="imagenesCarrusel/asado2.png" class="d-block w-100 h-300" alt="..." >
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
